--- a/bubble-shooter/index.html
+++ b/bubble-shooter/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bubble Shooter Unblocked - Classic Popping Puzzle Game</title>
-    <meta name="description" content="Bubble Shooter Unblocked is the timeless color-matching puzzle game. Aim your cannon, shoot bubbles, and match 3 or more of the same color to pop them. Clear the board!">
+    <title>Bubble Shooter Unblocked Play Free Online at FAF Games | GitHub.io</title>
+    <meta name="description" content="Play Bubble Shooter Unblocked online for free at FAF Games or GitHub.io. Match and pop colorful bubbles, clear the board, and enjoy this classic puzzle game no download or registration needed!">
     <meta name="keywords" content="bubble shooter, bubble shooter unblocked, puzzle game, skill game, match-3, classic game, bubble game">
-    <link rel="canonical" href="https://onlyszgames.github.io/bubble-shooter" />
+    <link rel="canonical" href="https://fafgamess.github.io/bubble-shooter" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="Bubble Shooter Unblocked - Classic Popping Puzzle Game" />
-    <meta property="og:description" content="Bubble Shooter Unblocked is the timeless color-matching puzzle game. Aim your cannon, shoot bubbles, and match 3 or more of the same color to pop them. Clear the board!" />
-    <meta property="og:url" content="https://onlyszgames.github.io/bubble-shooter" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/bubble-shooter.png" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="Bubble Shooter Unblocked Play Free Online at FAF Games | GitHub.io" />
+    <meta property="og:description" content="Play Bubble Shooter Unblocked online for free at FAF Games or GitHub.io. Match and pop colorful bubbles, clear the board, and enjoy this classic puzzle game no download or registration needed!" />
+    <meta property="og:url" content="https://fafgamess.github.io/bubble-shooter" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/bubble-shooter.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Bubble Shooter Unblocked - Classic Popping Puzzle Game">
-    <meta name="twitter:description" content="Bubble Shooter Unblocked is the timeless color-matching puzzle game. Aim your cannon, shoot bubbles, and match 3 or more of the same color to pop them. Clear the board!">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/bubble-shooter.png">
+    <meta name="twitter:title" content="Bubble Shooter Unblocked Play Free Online at FAF Games | GitHub.io">
+    <meta name="twitter:description" content="Play Bubble Shooter Unblocked online for free at FAF Games or GitHub.io. Match and pop colorful bubbles, clear the board, and enjoy this classic puzzle game no download or registration needed!">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/bubble-shooter.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Bubble Shooter",
-        "url": "https://onlyszgames.github.io/bubble-shooter",
-        "description": "Bubble Shooter Unblocked is the timeless color-matching puzzle game. Aim your cannon, shoot bubbles, and match 3 or more of the same color to pop them. Clear the board!",
+        "url": "https://fafgamess.github.io/bubble-shooter",
+        "description": "Play Bubble Shooter Unblocked online for free at FAF Games or GitHub.io. Match and pop colorful bubbles, clear the board, and enjoy this classic puzzle game no download or registration needed!",
         "genre": "Puzzle",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/bubble-shooter.png"
+        "image": "https://fafgamess.github.io/img/bubble-shooter.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -451,7 +451,7 @@ justify-content: center;}
         </div>
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/bubble-shooter.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/bubble-shooter.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Bubble Shooter</div>
@@ -464,7 +464,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/bubble-shooter.png" alt="Bubble Shooter
+            <img src="https://fafgamess.github.io/img/bubble-shooter.png" alt="Bubble Shooter
 Gameplay" class="game-description-image" title="Bubble Shooter">
             <h2>🔵 About Bubble Shooter</h2><p>Bubble Shooter is one of the most popular and enduring puzzle games ever created. The concept is simple: the screen is filled with a cluster of colored bubbles. You control a cannon at the bottom that fires a single bubble. Your goal is to aim and shoot that bubble to hit a group of two or more bubbles of the same color. When you make a match of three or more, the entire group 'pops' and disappears. Bubble Shooter Unblocked is a relaxing yet strategic game of geometry and color-matching.</p><h2>✨ Game Features Bubble Shooter</h2><p>The main feature of Bubble Shooter is its simple, satisfying gameplay loop. The physics of aiming and "bouncing" bubbles off the side walls adds a layer of skill. If you make several successful pops in a row, you can build up a bonus. However, if you miss a certain number of shots (failing to make a match), a new row of bubbles will be added from the top, pushing the whole cluster down. This creates the game's core tension: you must clear the board before the bubbles reach the bottom line. Bubble Shooter Unblocked is the perfect game for a quick mental break.</p><h3>Pro-Popping Strategy</h3><ul><li>Use the Walls: Bouncing shots off the side walls is essential for hitting hard-to-reach spots.</li><li>Aim High: Try to clear bubbles that are 'holding up' other bubbles. Popping a cluster high up can cause a chain reaction, dropping all the bubbles below it.</li><li>Plan Ahead: Look at the 'next' bubble in your cannon to plan your next two moves.</li><li>Do Not Create Singles: Avoid leaving a single bubble of one color isolated; it will be very hard to clear.</li></ul><h2>🕹️ How to Play Bubble Shooter</h2><p>Playing Bubble Shooter is very simple. Use your mouse to aim the cannon. A guideline will show you the trajectory of your shot. Click the left mouse button to fire the bubble. Your goal is to hit a bubble of the same color. If your shot creates a cluster of three or more bubbles of the same color, they will all pop. Any bubbles that were only attached to the popped cluster will also fall and be cleared. The game is won when you clear the entire board of bubbles. You lose if the bubbles stack all the way down to the bottom of the screen. Bubble Shooter Unblocked is easy to play, but hard to master.</p>
             <div class="game-features">
@@ -517,7 +517,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/bike-trials-offroad-1" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bike-trials-offroad-1.png" alt="Bike Trials Offroad 1 The Ultimate Dirt Ride">
+                                <img src="https://fafgamess.github.io/img/bike-trials-offroad-1.png" alt="Bike Trials Offroad 1 The Ultimate Dirt Ride">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bike Trials Offroad 1 The Ultimate Dirt Ride</h3>
@@ -528,7 +528,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/football-blitz" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/football-blitz.png" alt="Football Blitz">
+                                <img src="https://fafgamess.github.io/img/football-blitz.png" alt="Football Blitz">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Football Blitz</h3>
@@ -539,7 +539,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/foot-chinko" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/foot-chinko.png" alt="Foot Chinko">
+                                <img src="https://fafgamess.github.io/img/foot-chinko.png" alt="Foot Chinko">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Foot Chinko</h3>
@@ -550,7 +550,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/brain-test-2-tricky-stories" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/brain-test-2-tricky-stories.png" alt="Brain Test 2 Tricky Stories Witty Puzzles">
+                                <img src="https://fafgamess.github.io/img/brain-test-2-tricky-stories.png" alt="Brain Test 2 Tricky Stories Witty Puzzles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Brain Test 2 Tricky Stories Witty Puzzles</h3>
@@ -561,7 +561,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/candy-jump" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/candy-jump.png" alt="Candy Jump An Endless Bouncing Game">
+                                <img src="https://fafgamess.github.io/img/candy-jump.png" alt="Candy Jump An Endless Bouncing Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Candy Jump An Endless Bouncing Game</h3>
@@ -572,7 +572,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/football-penalty-champions" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/football-penalty-champions.png" alt="Football Penalty Champions Shootout">
+                                <img src="https://fafgamess.github.io/img/football-penalty-champions.png" alt="Football Penalty Champions Shootout">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Football Penalty Champions Shootout</h3>
@@ -583,7 +583,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/bad-ice-cream-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bad-ice-cream-2.png" alt="Bad Ice Cream 2 The Chilly Co-Op Sequel">
+                                <img src="https://fafgamess.github.io/img/bad-ice-cream-2.png" alt="Bad Ice Cream 2 The Chilly Co-Op Sequel">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bad Ice Cream 2 The Chilly Co-Op Sequel</h3>
@@ -594,7 +594,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/blob-drop" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blob-drop.png" alt="Blob Drop Physics Puzzle">
+                                <img src="https://fafgamess.github.io/img/blob-drop.png" alt="Blob Drop Physics Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blob Drop Physics Puzzle</h3>
@@ -605,7 +605,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/subway-surfers-beijing" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/subway-surfers-beijing.png" alt="Subway Surfers Beijing World Tour">
+                                <img src="https://fafgamess.github.io/img/subway-surfers-beijing.png" alt="Subway Surfers Beijing World Tour">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Subway Surfers Beijing World Tour</h3>
@@ -616,7 +616,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/fnf-week-7" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fnf-week-7.png" alt="Fnf Week 7 Official Release">
+                                <img src="https://fafgamess.github.io/img/fnf-week-7.png" alt="Fnf Week 7 Official Release">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fnf Week 7 Official Release</h3>
@@ -627,7 +627,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/fireboy-and-watergirl-2-light-temple" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fireboy-and-watergirl-2-light-temple.png" alt="Fireboy And Watergirl 2 Light Temple Co-Op Puzzle">
+                                <img src="https://fafgamess.github.io/img/fireboy-and-watergirl-2-light-temple.png" alt="Fireboy And Watergirl 2 Light Temple Co-Op Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fireboy And Watergirl 2 Light Temple Co-Op Puzzle</h3>
@@ -638,7 +638,7 @@ class="category-tag-item" style="background-color: #2962FF;">
                     <div class="game-card">
                         <a href="/ovo" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/ovo.png" alt="OvO The Ultimate Platformer Challenge">
+                                <img src="https://fafgamess.github.io/img/ovo.png" alt="OvO The Ultimate Platformer Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">OvO The Ultimate Platformer Challenge</h3>
@@ -695,8 +695,8 @@ class="category-tag-item" style="background-color: #2962FF;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -708,7 +708,7 @@ class="category-tag-item" style="background-color: #2962FF;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
