--- a/10-minutes-till-dawn/index.html
+++ b/10-minutes-till-dawn/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Minutes Till Dawn Unblocked</title>
-    <meta name="description" content="Survive for 10 minutes in 10 Minutes Till Dawn Unblocked. This intense horror-action shooter pits you against endless hordes of Lovecraftian monsters.">
+    <title>10 Minutes Till Dawn Unblocked Play Free Shooting Game at FAF Games | GitHub.io</title>
+    <meta name="description" content="Play 10 Minutes Till Dawn Unblocked online for free on FAF Games or GitHub.io. Survive waves of monsters, upgrade your weapons, and test your endurance in this thrilling survival shooter no downloads required!">
     <meta name="keywords" content="10 minutes till dawn, 10 minutes till dawn unblocked, shooter game, action game, horror game, survival game, free online game">
-    <link rel="canonical" href="https://onlyszgames.github.io/10-minutes-till-dawn" />
+    <link rel="canonical" href="https://fafgamess.github.io/10-minutes-till-dawn" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="10 Minutes Till Dawn Unblocked ✦ Action" />
-    <meta property="og:description" content="Survive for 10 minutes in 10 Minutes Till Dawn Unblocked. This intense horror-action shooter pits you against endless hordes of Lovecraftian monsters." />
-    <meta property="og:url" content="https://onlyszgames.github.io/10-minutes-till-dawn" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/10-minutes-till-dawn.png" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="10 Minutes Till Dawn Unblocked Play Free Shooting Game at FAF Games | GitHub.io" />
+    <meta property="og:description" content="Play 10 Minutes Till Dawn Unblocked online for free on FAF Games or GitHub.io. Survive waves of monsters, upgrade your weapons, and test your endurance in this thrilling survival shooter no downloads required!" />
+    <meta property="og:url" content="https://fafgamess.github.io/10-minutes-till-dawn" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/10-minutes-till-dawn.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@OnlySZGames">
-    <meta name="twitter:title" content="10 Minutes Till Dawn Unblocked ✦ Action">
-    <meta name="twitter:description" content="Survive for 10 minutes in 10 Minutes Till Dawn Unblocked. This intense horror-action shooter pits you against endless hordes of Lovecraftian monsters.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/10-minutes-till-dawn.png">
+    <meta name="twitter:site" content="@FAFGames">
+    <meta name="twitter:title" content="10 Minutes Till Dawn Unblocked Play Free Shooting Game at FAF Games | GitHub.io">
+    <meta name="twitter:description" content="Play 10 Minutes Till Dawn Unblocked online for free on FAF Games or GitHub.io. Survive waves of monsters, upgrade your weapons, and test your endurance in this thrilling survival shooter no downloads required!">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/10-minutes-till-dawn.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "10 Minutes Till Dawn Survive the Horde",
-        "url": "https://onlyszgames.github.io/10-minutes-till-dawn",
-        "description": "Survive for 10 minutes in 10 Minutes Till Dawn Unblocked. This intense horror-action shooter pits you against endless hordes of Lovecraftian monsters.",
+        "url": "https://fafgamess.github.io/10-minutes-till-dawn",
+        "description": "Play 10 Minutes Till Dawn Unblocked online for free on FAF Games or GitHub.io. Survive waves of monsters, upgrade your weapons, and test your endurance in this thrilling survival shooter no downloads required!",
         "genre": "Shooter",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/10-minutes-till-dawn.png"
+        "image": "https://fafgamess.github.io/img/10-minutes-till-dawn.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -450,7 +450,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/10-minutes-till-dawn.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/10-minutes-till-dawn.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play 10 Minutes Till Dawn Survive the Horde</div>
@@ -463,7 +463,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/10-minutes-till-dawn.png" alt="10 Minutes Till Dawn Survive the Horde
+            <img src="https://fafgamess.github.io/img/10-minutes-till-dawn.png" alt="10 Minutes Till Dawn Survive the Horde
 Gameplay" class="game-description-image" title="10 Minutes Till Dawn Survive the Horde">
             <h2>About 10 Minutes Till Dawn ⏰</h2><p>10 Minutes Till Dawn is a precursor to the popular game 20 Minutes Till Dawn, offering a focused and intense survival experience. You are a lone survivor in a dark, monster-filled world. The objective is simple: survive for 10 minutes. The gameplay is a brilliant mix of twin-stick shooting and roguelite upgrades. As you defeat monsters, you gain experience and level up, allowing you to choose from a tree of powerful synergies. This 10 Minutes Till Dawn Unblocked game is incredibly addictive.</p><h2>Game Features 10 Minutes Till Dawn 🦇</h2><p>The core of 10 Minutes Till Dawn Unblocked is its deep and synergistic upgrade system. Each level-up presents you with a choice of perks that can drastically change your playstyle. Do you upgrade your shotgun's spread, add fire bullets, or summon a magic knife? Combining these upgrades creates unique and overpowered builds. The game features multiple characters and weapons, each with its own strengths. The pixel-art-meets-gothic-horror aesthetic is incredibly effective.</p><h3>Survival Strategy</h3><ul><li>Keep moving. Never stop.</li><li>Focus on upgrades that work well together (e.g., all fire or all lightning).</li><li>Prioritize movement speed and health in the early game.</li><li>Find a clear path to 'kite' the horde behind you.</li></ul><h2>How to Play 10 Minutes Till Dawn 🎮</h2><p>Use WASD to move your character. Your character aims and shoots automatically at the nearest enemy. Your only job is to move, dodge, and survive. As enemies fall, they drop experience gems. Collect these to fill your experience bar. When you level up, the game pauses, and you can choose one of three (or more) upgrades. Your goal is to build a powerful set of abilities that can clear the screen of monsters. Survive until the 10-minute timer runs out to win.</p>
             <div class="game-features">
@@ -521,7 +521,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/five-nights-at-freddys" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/five-nights-at-freddys.png" alt="Five Nights At Freddys The Original Horror">
+                                <img src="https://fafgamess.github.io/img/five-nights-at-freddys.png" alt="Five Nights At Freddys The Original Horror">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Five Nights At Freddys The Original Horror</h3>
@@ -532,7 +532,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/blumgi-ball" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blumgi-ball.png" alt="Blumgi Ball">
+                                <img src="https://fafgamess.github.io/img/blumgi-ball.png" alt="Blumgi Ball">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blumgi Ball</h3>
@@ -543,7 +543,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/bearsus" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bearsus.png" alt="Bearsus Chaotic 2-Player Combat">
+                                <img src="https://fafgamess.github.io/img/bearsus.png" alt="Bearsus Chaotic 2-Player Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bearsus Chaotic 2-Player Combat</h3>
@@ -554,7 +554,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/moto-x3m-pool-party" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/moto-x3m-pool-party.png" alt="Moto X3M Pool Party Summer Fun">
+                                <img src="https://fafgamess.github.io/img/moto-x3m-pool-party.png" alt="Moto X3M Pool Party Summer Fun">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Moto X3M Pool Party Summer Fun</h3>
@@ -565,7 +565,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/cave-blast" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/cave-blast.png" alt="Cave Blast A Retro Platformer Shooter">
+                                <img src="https://fafgamess.github.io/img/cave-blast.png" alt="Cave Blast A Retro Platformer Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Cave Blast A Retro Platformer Shooter</h3>
@@ -576,7 +576,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/basketball-legends" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/basketball-legends.png" alt="Basketball Legends 2 Player Hoops">
+                                <img src="https://fafgamess.github.io/img/basketball-legends.png" alt="Basketball Legends 2 Player Hoops">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Basketball Legends 2 Player Hoops</h3>
@@ -587,7 +587,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/fnf-vs-shaggy-x-matt" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/fnf-vs-shaggy-x-matt.png" alt="Fnf Vs Shaggy X Matt Insane Mod">
+                                <img src="https://fafgamess.github.io/img/fnf-vs-shaggy-x-matt.png" alt="Fnf Vs Shaggy X Matt Insane Mod">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Fnf Vs Shaggy X Matt Insane Mod</h3>
@@ -598,7 +598,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/descent" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/descent.png" alt="Descent A 3D Retro Space Shooter">
+                                <img src="https://fafgamess.github.io/img/descent.png" alt="Descent A 3D Retro Space Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Descent A 3D Retro Space Shooter</h3>
@@ -609,7 +609,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/speed-stars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/speed-stars.png" alt="Speed Stars">
+                                <img src="https://fafgamess.github.io/img/speed-stars.png" alt="Speed Stars">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Speed Stars</h3>
@@ -620,7 +620,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/rocket-pult" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/rocket-pult.png" alt="Rocket Pult">
+                                <img src="https://fafgamess.github.io/img/rocket-pult.png" alt="Rocket Pult">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Rocket Pult</h3>
@@ -631,7 +631,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/curve-ball-3d" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/curve-ball-3d.png" alt="Curve Ball 3D Classic Pong">
+                                <img src="https://fafgamess.github.io/img/curve-ball-3d.png" alt="Curve Ball 3D Classic Pong">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Curve Ball 3D Classic Pong</h3>
@@ -642,7 +642,7 @@ class="category-tag-item" style="background-color: #4A148C;">
                     <div class="game-card">
                         <a href="/stickman-run" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-run.png" alt="Stickman Run Fast Platformer">
+                                <img src="https://fafgamess.github.io/img/stickman-run.png" alt="Stickman Run Fast Platformer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Run Fast Platformer</h3>
@@ -699,8 +699,8 @@ class="category-tag-item" style="background-color: #4A148C;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -712,7 +712,7 @@ class="category-tag-item" style="background-color: #4A148C;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
