--- a/odd-bot-out/index.html
+++ b/odd-bot-out/index.html
@@ -6,7 +6,7 @@
     <title>Odd Bot Out | Play Unblocked Games</title>
     <meta name="description" content="Odd Bot Out and other unblocked games instantly in fullscreen no downloads, no ads. Help the little robot escape puzzling levels and enjoy a fun, brain-teasing adventure!">
     <meta name="keywords" content="odd bot out, odd bot out unblocked, unblocked games, play odd bot out online, puzzle unblocked games, robot puzzle game, odd bot out browser game, free unblocked games, logic games online, odd bot out full screen">
-    <link rel="canonical" href="https://fafgamess.github.io/odd-bot-out/" />
+    <<link rel="canonical" href="https://fafgamess.github.io/odd-bot-out/index.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
     <meta property="og:title" content="Odd Bot Out | Play Unblocked Games" />
