--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="google-site-verification" content="99hMaiR9ixzkeLwhcqZg7u8SB6Y7wu_Zz8sYpXgfzCc" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTWP0D3P2J"></script>
+    <!-- LinkedIn Profile Badge Script -->
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
