--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="canonical" href="https://fafgamess.github.io/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Github.io Games | Play Unblocked Games For Free" />
+    <meta property="og:title" content="FAF Games | Play Unblocked Games For Fre" />
     <meta property="og:description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!" />
     <meta property="og:url" content="https://fafgamess.github.io/" />
     <meta property="og:image" content="https://fafgamess.github.io/img/og-image.png" />
@@ -35,14 +35,13 @@
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Github.io Games | Play Unblocked Games For Free">
+    <meta name="twitter:title" content="FAF Games | Play Unblocked Games For Fre">
     <meta name="twitter:description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/twitter-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://onlyszgames.github.io","name":"FAF Games","potentialAction":{"@type":"SearchAction","target":"https://fafgamess.github.io/search?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <meta name="google-site-verification" content="aLyN5ErmZSlelTUd3NtEixDnSIPJ1szqJHl5eG7VKKI" />
     <style>
         :root {
     --primary: #ff7b1c;
